<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>linorobot2_gazebo</name>
    <version>0.0.0</version>
    <description>Linorobot2 Gazebo Package</description>
    <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
    <license>Apache 2.0</license>
    <url type="website">linorobot.org</url>
    <url type="repository">https://github.com/linorobot/linorobot2</url>
    <url type="bugtracker">https://github.com/linorobot/linorobot2/issues</url>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <exec_depend>gazebo_ros_pkgs</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
